[package]
name = "r-cache"
version = "0.5.0"
authors = ["cobbinma <cobbinma@gmail.com>"]
edition = "2021"
description = "r-cache is an in memory key value store. It is thread safe and values have expiry times"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cobbinma/r-cache"
categories = [
    "caching",
]
keywords = ["cache"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
